BF: Review: Optimization and corrections
    And the binary becomes a bit smaller again :-)
    TODO: 31354/31313/31151/31188/31217
BF: Windows: Correction in the determination of platform architecture
BF: Review: Removal of dependency on ISO-8859-1
    - Optimization and correction of partial UTF-8 decoding, which is now
      partial ISO-8859-1 decoding.
CR: HTTP(S) CGI: Optimization and corrections
    - Optimization when accessing data streams
    - Optimization in handling blocking CGI processes
    - Optimization in enforcing the end of the process
    - Optimization when reading error information
    - Optimization in the analysis of the exit code now consistently leads to
      status 502 in the access log and, if no header has been sent yet, also as
      HTTP status.
CR: HTTP(S): Optimization and corrections
    - Optimization in handling blocking I/O streams
    - Cleaning up old MIME types in the configuration
CR: HTTP(S) Directory Index: Optimization and corrections
    - Template: "case" and "type" are omitted without replacement
    - Template: "date" becomes "modified" and the sorting changes from d/D to m/M
    - Template: "sort" becomes "state", including the state logic in the CSS
    - Template: "mime" is now the fully qualified value
    - Generator value "-" for "no data" is omitted; now it's empty
CR: Review: Initialize refactored in Settings
CR: Review: Facelift status / index / templates
    - Use of system colors and thus support for light and dark mode
    - Improved display for HiDPI
CR: Windows: Removal of the 32-bit service
    - The required 32-bit version of prunsrv.exe can be downloaded manually
      here, renamed, and used to replace service.exe:
      https://downloads.apache.org/commons/daemon/binaries/windows/
CR: Documentation: Added installation as a service for Linux and macOS
CR: Configuration: Added support of # as alternative comment symbol
    The configuration now supports both ; and # as comment characters, which